--- a/css/styles.css
+++ b/css/styles.css
@@ -264,8 +264,8 @@ body {
 
 /* Footer */
 .footer {
-    background-color: #111827;
-    color: white;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
     padding: 48px 20px;
 }
 
